TestGITProcess/force-app/main/default/objects/Pepvil_visiter_detail__c/Pepvil_visiter_detail__c.object-meta.xml
<CustomObject>
    <label>Pepvil visitor detail</label>
    <nameField>
        <label>Visitor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pepvil visitor details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>