TestGITProcess/force-app/main/default/objects/Pepvil_visiter_detail__c/fields/Activities_Done__c.field-meta.xml
<CustomField>
    <fullName>Activities_Done__c</fullName>
    <inlineHelpText>What Activities were Done</inlineHelpText>
    <label>Activities Done</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>