TestGITProcess/force-app/main/default/objects/Pepvil_visiter_detail__c/fields/Any_Other_Information_to_be_Shared__c.field-meta.xml
<CustomField>
    <fullName>Any_Other_Information_to_be_Shared__c</fullName>
    <label>Any Other Information to be Shared</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>