TestGITProcess/force-app/main/default/objects/Pepvil_visiter_detail__c/fields/Any_Suggestions__c.field-meta.xml
<CustomField>
    <fullName>Any_Suggestions__c</fullName>
    <label>Any Suggestions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>