TestGITProcess/force-app/main/default/objects/Pepvil_visiter_detail__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Mail</label>
    <type>Email</type>
</CustomField>