TestGITProcess/force-app/main/default/objects/Pepvil_visiter_detail__c/fields/Key_Highlights_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Key_Highlights_of_Visit__c</fullName>
    <label>Key Highlights of Visit</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>