TestGITProcess/force-app/main/default/objects/Pepvil_visiter_detail__c/fields/Time_1__c.field-meta.xml
<CustomField>
    <fullName>Time_1__c</fullName>
    <label>In Time</label>
    <type>Time</type>
</CustomField>