TestGITProcess/force-app/main/default/objects/Pepvil_visiter_detail__c/fields/Time_2__c.field-meta.xml
<CustomField>
    <fullName>Time_2__c</fullName>
    <label>Out Time</label>
    <type>Time</type>
</CustomField>