TestGITProcess/force-app/main/default/objects/Pepvil_visiter_detail__c/fields/Village__c.field-meta.xml
<CustomField>
    <fullName>Village__c</fullName>
    <label>Place</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>