TestGITProcess/force-app/main/default/objects/Pepvil_visiter_detail__c/fields/What_you_Liked__c.field-meta.xml
<CustomField>
    <fullName>What_you_Liked__c</fullName>
    <label>What you Liked</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>