TestGITProcess/force-app/main/default/objects/Pepvil_visiter_detail__c/fields/Who_are_all_came_with_him__c.field-meta.xml
<CustomField>
    <fullName>Who_are_all_came_with_him__c</fullName>
    <label>Who are all came with him</label>
    <type>TextArea</type>
</CustomField>