TestGITProcess/force-app/main/default/objects/Pepvil_visiter_detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Time_1__c</columns>
    <columns>Time_2__c</columns>
    <columns>Email__c</columns>
    <columns>Village__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>